--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "tailwindcss-debug-screens": "^2.2.1"
   }
 }
